@@ -53,6 +53,8 @@ xx/xx/2004 - 2.0.0-WIP
 	- New API: attrib.[ch]::ntfs_resident_attr_record_add.  (Yura)
 	- New API: inode.[ch]::ntfs_inode_add_attrlist.  (Yura)
 	- New API: attrlist.[ch]::ntfs_attrlist_need.  (Yura)
+	- ntfsclone: save by using our, not NTFS cluster allocation bitmap. 
+	  This gives more control in the future what to save (Szaka)
 
 04/09/2004 - 1.9.4 - Urgent bug fixes.
 
